# GptApiToOSSMigrator

./: .gitignore  LICENSE  MIGRATION_DEMO.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  TASKS.md  converted_chat_service_demo.py  push_repository.sh  pyproject.toml  requirements.txt  simple_test.py  test_migration.py
.github/workflows/: ci.yml
examples/: app_legacy.py  sample_app.py  sample_openai_app.py
gpt_migrator/: __init__ 2.py  __init__.py
gpt_migrator/analyzer/: __init__.py
harmony_migrator/: __init__.py  cli.py
harmony_migrator/analyzer/: cost_analyzer.py
harmony_migrator/converter/: __init__.py  converter.py  harmony_builder.py
harmony_migrator/core/: __init__.py  config.py  models.py
harmony_migrator/inference/: __init__.py  backends.py  inference.py
harmony_migrator/migrator/: __init__.py  basic_migrator.py
harmony_migrator/scanner/: __init__.py  detectors.py  scanner.py
harmony_migrator/tools/: __init__.py  registry.py
harmony_migrator/utils/: __init__.py  file_utils.py  git_utils.py
tests/: __init__.py  test_converter.py  test_scanner.py
