[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmony-migrator"
version = "1.0.0"
description = "Automate migration from OpenAI APIs to local GPT-OSS models via Harmony format"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HarmonyMigrator Team", email = "team@harmonymigrator.dev"}
]
keywords = ["openai", "gpt-oss", "harmony", "migration", "local-ai", "offline-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "tomli>=2.0.0",
    "openai-harmony>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
harmony-migrator = "harmony_migrator.cli:app"

[project.urls]
Homepage = "https://github.com/harmony-migrator/harmony-migrator"
Documentation = "https://harmony-migrator.readthedocs.io"
Repository = "https://github.com/harmony-migrator/harmony-migrator"
Issues = "https://github.com/harmony-migrator/harmony-migrator/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=harmony_migrator --cov-report=term-missing" 