[project]
name = "gpt-api-to-oss-migrator"
version = "0.1.0"
description = "Tool to help migrate OpenAI API calls to local models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Saurabh Yergattikar", email = "saurabh.ssy@gmail.com"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "tomli>=2.0.0",
]

[project.scripts]
gpt-migrator = "gpt_migrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=gpt_migrator --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3